objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_FTE__c</fullName>
        <description>If Unomy Company Size has been enriched this field returns that value. If not, it returns the Number of Full Time Employees value</description>
        <formula>if( 
NOT(ISBLANK(Unomy_Updated_DateTime__c)), 

if( 
NOT(ISBLANK(Unomy_Company_Size__c)), Unomy_Company_Size_Min__c,Number_of_Full_Time_Employees__c 



),Number_of_Full_Time_Employees__c 

)</formula>
        <label>Account FTE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup to Account Manager</description>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is store the HQ Market for this account found according to account unomy OR billing street,city,state.country. Created for ST-3198</description>
        <inlineHelpText>Stores the nearest HQ Market according to unomy OR billing street,city,state,country.</inlineHelpText>
        <label>HQ Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_RecordType_For_Batch__c</fullName>
        <description>This field will contain the ownerId of the owner who needs to be made the owner from the update market batch. This field is populated in before triggers of account and then is used to bypass the child owner and record type change trigger in the after trigger context.</description>
        <label>Account Owner Record Type For Batch</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference of account queue</description>
        <label>Account Queue</label>
        <referenceTo>Account_Queue__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <label>Account Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attract</fullName>
                </value>
                <value>
                    <fullName>Engage</fullName>
                </value>
                <value>
                    <fullName>Transact</fullName>
                </value>
                <value>
                    <fullName>Align</fullName>
                </value>
                <value>
                    <fullName>Ascend</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_SubType__c</fullName>
        <label>Account SubType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Tag__c</fullName>
        <description>Used for grouping and tracking experiments for initiatives (upsell, targeting, etc..)</description>
        <label>Account Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This is Picklist which Contains three values
1. Org : It is Main account in hierarchy which is Parent Account of Sales And Bill.
2. Sales: One Sales Account may contain multiple Bill Or Sales Account and It is Under Org Account in hierarchy
3. Bill: Bill Account is under Sales or Org. It never child of Bill Account.
4. ' '(Blank) : It is like Bill type which is under Sales or Org.</description>
        <inlineHelpText>This Picklist is used to determine the account type.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Org</fullName>
                    <default>true</default>
                    <label>Org</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allow_Merge__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Auth_Signatory_Email__c</fullName>
        <formula>Authorized_Signatory__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Signatory Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Signatory_Phone__c</fullName>
        <formula>Authorized_Signatory__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Signatory Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Signatory_Title__c</fullName>
        <formula>Authorized_Signatory__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auth Signatory Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Address__c</fullName>
        <label>Authorize Signatory Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_City__c</fullName>
        <label>Authorize Signatory City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_State__c</fullName>
        <label>Authorize Signatory State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorize_Signatory_Zip__c</fullName>
        <label>Authorize Signatory Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Signatory</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Authorized Signatory)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI360_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unomy Company</label>
        <referenceTo>CICompany__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cleansed_Account_Name__c</fullName>
        <description>This field is used to save cleansed Account Name</description>
        <label>Cleansed Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleansed_Unomy_Company_Name__c</fullName>
        <description>This field is used to save cleansed unomy company name</description>
        <label>Cleansed Unomy Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-5</fullName>
                </value>
                <value>
                    <fullName>6-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>200+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BY</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BZ</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>BV</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Owner_Email__c</fullName>
        <description>Field stores current Owner email for workflow email alert</description>
        <label>Current Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Notes__c</fullName>
        <label>Data Migration Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Business__c</fullName>
        <description>Field at ORG level that represents date we first started working with a company. Date of first closed won deal for this account.

Updated by workflow rule ROE - First Deal Close Date</description>
        <label>First Deal Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <description>Field to define Deal Type for the account based on the Number of Desks</description>
        <formula>IF(ISBLANK(TEXT( Interested_in_Number_of_Desks__c )) || Interested_in_Number_of_Desks__c&lt;10,'Transactional',IF(Interested_in_Number_of_Desks__c&gt;=10 &amp;&amp; Interested_in_Number_of_Desks__c&lt;20,'Relational','Strategic'))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Deal type for the account</inlineHelpText>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_without_AC_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to mark the account not to be contacted with the Account Manager</description>
        <inlineHelpText>Checkbox to mark the account not to be contacted with the Account Manager</inlineHelpText>
        <label>Do Not Contact without AC Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <description>18 Digit Id</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Hidden__c</fullName>
        <externalId>true</externalId>
        <label>External ID (Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forcefully_Account_Assignment__c</fullName>
        <description>This field is used for self booked tour's account and opportunity assignment.</description>
        <formula>(CreatedDate+(3/24/60))&lt;=NOW() || NOT(ISBLANK(Unomy_Updated_DateTime__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used for self booked tour's account and opportunity assignment..</inlineHelpText>
        <label>Forcefully Account Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personally funded</fullName>
                </value>
                <value>
                    <fullName>Friends &amp; family</fullName>
                </value>
                <value>
                    <fullName>Crowdfunding (non-equity or debt)</fullName>
                </value>
                <value>
                    <fullName>Crowdfunding (equity or debt)</fullName>
                </value>
                <value>
                    <fullName>Angel investors</fullName>
                </value>
                <value>
                    <fullName>Venture Capital investors</fullName>
                </value>
                <value>
                    <fullName>Other financial investors (e.g., PE firm, hedge fund)</fullName>
                </value>
                <value>
                    <fullName>Strategic investors (institutional, non-financial investor)</fullName>
                </value>
                <value>
                    <fullName>Public market equity / debt funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_HCM_Notes__c</fullName>
        <label>General HCM Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the geography record which is created when we find the market for account. Created for ST-3198</description>
        <inlineHelpText>Store the geography record which is created when we find the market for account.</inlineHelpText>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Had_HD_or_WeMembership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for mapping db information from spaceman_public.accounts for account merge</description>
        <label>Had HD or WeMembership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_non_wework_space__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has non wework space</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HierarchyLevel__c</fullName>
        <formula>IF(ISBLANK(Parent.Id), '0', IF(ISBLANK(Parent.Parent.Id), '1',IF(ISBLANK(Parent.Parent.Parent.Id), '2',IF(ISBLANK(Parent.Parent.Parent.Parent.Id), '3',IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Id), '4',IF(ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent_Org_Id__c),'5',null))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HierarchyLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_with_WeWork__c</fullName>
        <label>History with WeWork</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hold_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On MLB Hold List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Creation_Status_Code__c</fullName>
        <label>ID Creation Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Error_Message__c</fullName>
        <label>ID Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Payment_Error_Message__c</fullName>
        <label>ID Payment Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Payment_Status_Code__c</fullName>
        <label>ID Payment Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Status2__c</fullName>
        <inlineHelpText>This field determine whether or not the company is active in WeWork spaces</inlineHelpText>
        <label>ID Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                    <default>true</default>
                    <label>inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Max__c</fullName>
        <label>Interested in Number of Desks Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Min__c</fullName>
        <label>Interested in Number of Desks Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks_Range__c</fullName>
        <label>Interested in Number of Desks Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interested_in_Number_of_Desks__c</fullName>
        <label>Interested in Number of Desk(s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActiveOwner__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActiveOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when the account is merged for the 1st time.</description>
        <label>Is Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Account_Management_Followup__c</fullName>
        <label>Last Account Management Followup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_User_Request_Approved__c</fullName>
        <description>Timestamp of last time Request Unomy Update (via field: Use User FTE and HQ Location) was approved. Updated via process: Account - ROE Unomy Override</description>
        <inlineHelpText>Date last Unomy update request was approved by Growth Ops</inlineHelpText>
        <label>Last Unomy Update Approved</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource_Sub_Type__c</fullName>
        <label>Lead Source Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source_Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lighthouse_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether this account is a Lighthouse Account
Created for ST-2391</description>
        <inlineHelpText>This field indicates whether this account is a Lighthouse Account</inlineHelpText>
        <label>Lighthouse Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>af</fullName>
                </value>
                <value>
                    <fullName>af-ZA</fullName>
                </value>
                <value>
                    <fullName>sq</fullName>
                </value>
                <value>
                    <fullName>sq-AL</fullName>
                </value>
                <value>
                    <fullName>gsw-FR</fullName>
                </value>
                <value>
                    <fullName>am-ET</fullName>
                </value>
                <value>
                    <fullName>ar</fullName>
                </value>
                <value>
                    <fullName>ar-DZ</fullName>
                </value>
                <value>
                    <fullName>ar-BH</fullName>
                </value>
                <value>
                    <fullName>ar-EG</fullName>
                </value>
                <value>
                    <fullName>ar-IQ</fullName>
                </value>
                <value>
                    <fullName>ar-JO</fullName>
                </value>
                <value>
                    <fullName>ar-KW</fullName>
                </value>
                <value>
                    <fullName>ar-LB</fullName>
                </value>
                <value>
                    <fullName>ar-LY</fullName>
                </value>
                <value>
                    <fullName>ar-MA</fullName>
                </value>
                <value>
                    <fullName>ar-OM</fullName>
                </value>
                <value>
                    <fullName>ar-QA</fullName>
                </value>
                <value>
                    <fullName>ar-SA</fullName>
                </value>
                <value>
                    <fullName>ar-SY</fullName>
                </value>
                <value>
                    <fullName>ar-TN</fullName>
                </value>
                <value>
                    <fullName>ar-AE</fullName>
                </value>
                <value>
                    <fullName>ar-YE</fullName>
                </value>
                <value>
                    <fullName>hy</fullName>
                </value>
                <value>
                    <fullName>hy-AM</fullName>
                </value>
                <value>
                    <fullName>as-IN</fullName>
                </value>
                <value>
                    <fullName>az</fullName>
                </value>
                <value>
                    <fullName>az-Cyrl-AZ</fullName>
                </value>
                <value>
                    <fullName>az-Latn-AZ</fullName>
                </value>
                <value>
                    <fullName>ba-RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Opportunities__c</fullName>
        <label>Lost Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Market_Identified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the user information who updated the market on this account. Created for ST-3198</description>
        <inlineHelpText>Shows the user who updated the market on this account</inlineHelpText>
        <label>HQ Market Identified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Identified_On__c</fullName>
        <description>This field store the date and time when HQ market is updated on account. Created for ST-3198</description>
        <inlineHelpText>Store the date and time when HQ market is updated on account</inlineHelpText>
        <label>HQ Market Identified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>This field will updated by Lead to Activity mapping.</description>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alexandria</fullName>
                </value>
                <value>
                    <fullName>Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Balston</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Bangkok</fullName>
                </value>
                <value>
                    <fullName>Barcelona</fullName>
                </value>
                <value>
                    <fullName>Barranquilla</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Belo Horizonte</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Bogotá</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Brisbane</fullName>
                </value>
                <value>
                    <fullName>Brussels</fullName>
                </value>
                <value>
                    <fullName>Budapest</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Busan</fullName>
                </value>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Cali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MasterAccount__c</fullName>
        <description>This is used by DemandTools</description>
        <formula>UUID__c =  Parent_UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MasterAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <label>Member Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good Fit</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Ok Fit</fullName>
                </value>
                <value>
                    <fullName>Not Good Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_Possible__c</fullName>
        <label>Move Possible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Named_Account_Date_Time_Stamp__c</fullName>
        <description>This field will get updated when "Named Account" checkbox is checked.</description>
        <inlineHelpText>This field will get updated when "Named Account" checkbox is checked.</inlineHelpText>
        <label>Named Account Date/Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Named_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked manually or some API.</description>
        <label>Named Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>This field stores Nickname value for sales account</description>
        <inlineHelpText>This field stores Nickname value for sales account</inlineHelpText>
        <label>Sales Account Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_opportunities__c</fullName>
        <label>No of opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notice_Possible__c</fullName>
        <label>Notice Possible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Open_Opportunities__c</fullName>
        <description>Shows total number of Open Opportunities(Excluding Closed Won and Closed Lost)</description>
        <label>Number Of Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Merged</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.OwnerId</field>
            <operation>equals</operation>
            <value>005F0000003Kmbw</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>